--- a/team1/index.html
+++ b/team1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/images/ega-furniture-logo.PNG" />
+    <link rel="icon" href="/images/logo.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EGA Furniture</title>
   </head>
